--- a/haung.html
+++ b/haung.html
@@ -26,7 +26,7 @@
         }
     </style>
 			<h4 style="text-align:right;">
-				<a href="https://joe555999.github.io/onefivewebsite/HorngChi_ver3" style="color:#ffdb4d; text-decoration: none;">首頁</a>&nbsp&nbsp&nbsp&nbsp&nbsp
+				<a href="https://std921414141.github.io/yellow-brother/haung.html" style="color:#ffdb4d; text-decoration: none;">首頁</a>&nbsp&nbsp&nbsp&nbsp&nbsp
 				<a href="#description_of_haung" style="color:#ffdb4d; text-decoration: none;">主人公介紹</a>&nbsp&nbsp&nbsp&nbsp&nbsp
 				<a href="" style="color:#ffdb4d; text-decoration: none;">遊戲園地(未完成)</a>&nbsp&nbsp&nbsp&nbsp&nbsp
 				<a href="" style="color:#ffdb4d; text-decoration: none;">未來見面會(未完成)</a>&nbsp&nbsp&nbsp&nbsp&nbsp
