--- a/haung.html
+++ b/haung.html
@@ -84,7 +84,7 @@
 		<div id="area_middle_3_inside_left">
 			<br>
 			<center>
-				<img src=".0..jpg" width="170">
+				<img src="瑋瑋.jpg" width="170">
 			<h1 style="color:rgb#ff4d4d">哲哲</h1>
 			
 				<ul id="tabulation_bonus">
