--- a/haung.html
+++ b/haung.html
@@ -79,7 +79,7 @@
 				</center>
 			</div>
 		</div>
-		<div id="area_middle_3_outside_left">
+		<div id="area_middle_3_outside">
 		</div>
 		<div id="area_middle_3_inside_left">
 			<br>
